--- a/src/components/NewsGrid.css
+++ b/src/components/NewsGrid.css
@@ -1,14 +1,248 @@
-/* .setArticles {
-    display: flex;
 
-} */
 
-.newsframe{
+
+
+.content {
+    height: 400px;
+    object-fit: contain;
+    margin: 10px;
+    overflow: hidden; 
     display: flex;
-    flex-direction: row;
-    border: 1px solid black;
+    flex-direction: column;
+    justify-content: space-between; 
 }
 
-NewsItem {
-    border: 1px solid black;
+.newsframe {
+    margin: 10px;
+    justify-content: center;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
+
+.news-app {
+    display: flex;
+    flex-direction: column; 
+    height: 100%; 
+    object-fit: fill;
+}
+
+.news-img {
+    width: 100%;
+    height: 200px;
+    object-fit: cover; 
+}
+
+h3 {
+    height: 50px;
+    overflow: hidden; 
+    text-overflow: ellipsis; 
+    white-space: nowrap; 
+}
+
+.news-item {
+    height: 100%;
+    width: 350px;
+    /* border: 4px solid #701f1f; */
+    border-radius: 8px;
+    margin: 10px;
+    object-fit: cover;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+/* nav styling */
+
+nav {
+    height: 100px;
+    background-color: coral;   
+    display: flex;
+    width: 100%;
+    flex-direction: row;
+    justify-content:space-evenly;
+    align-items: center;
+    padding: 0;
+    margin: 0;
+    grid-template-areas: nav;
+}
+
+.logo {
+    
+    justify-content: center;
+    object-fit: fill;
+    align-items: center;
+
+}
+
+.search {
+    background-color: white;
+    height: 100px;
+    display: flex;
+    justify-content: center; 
+    align-items: center; 
+    width: 100%;
+}
+
+.search input {
+    width: 300px;
+    height: 50px;
+    border-radius: 10px 0 0 10px;
+    border-right: none;
+}
+
+.search button {
+    width: 50px;
+    height: 56px;
+    padding: 5px 10px;
+    border-left: none;
+    border-radius: 0 10px 10px 0;
+}
+
+ul {
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font: 20px;
+    color: whitesmoke;
+    justify-content: center;
+    align-items: center;
+    height: 60px;
+    list-style: none;
+    display: flex;
+    margin: 0;
+    padding: 0;
+}
+
+ul li {
+    margin-right: 20px;
+    cursor: pointer; 
+}
+
+ul li a {
+    text-decoration: none;
+    color: inherit;
+}
+
+ul li a:hover {
+    text-decoration: underline;
+}
+
+
+/* General styles */
+nav {
+    height: 100px;
+    background-color: black;
+    display: flex;
+    width: 100%;
+    flex-direction: row;
+    justify-content:space-evenly;
+    align-items: center;
+    padding: 0;
+    margin: 0;
+    grid-template-areas: nav;
+}
+
+.logo {
+    justify-content: center;
+    object-fit: fill;
+    align-items: center;
+}
+
+.logo h2 {
+    color: white;
+}
+
+.search {
+    background-color: white;
+    height: 100px;
+    display: flex;
+    justify-content: center; 
+    align-items: center; 
+    width: 100%;
+}
+
+.search input {
+    width: 300px;
+    height: 50px;
+    border-radius: 10px 0 0 10px;
+    border-right: none;
+}
+
+.search button {
+    width: 50px;
+    height: 56px;
+    padding: 5px 10px;
+    border-left: none;
+    border-radius: 0 10px 10px 0;
+}
+
+ul {
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font: 28px;
+    justify-content: center;
+    align-items: center;
+    height: 60px;
+    list-style: none;
+    display: flex;
+    margin: 0;
+    padding: 0;
+}
+
+ul li {
+    margin-right: 20px;
+    cursor: pointer; 
+}
+
+ul li a {
+    text-decoration: none;
+    color: inherit;
+}
+
+ul li a:hover {
+    text-decoration: underline;
+}
+
+
+@media only screen and (max-width: 768px) {
+  .hamburger {
+    display: block;
+    cursor: pointer;
+    font-size: 24px;
+    padding: 10px;
+    color: white; /* Ensure the icon is visible */
+  }
+
+  nav {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 10px;
+  }
+
+  ul {
+    display: none;
+    flex-direction: column;
+    width: 100%;
+    background-color: black;
+    padding: 0;
+  }
+
+  ul.dropdown.open {
+    display: flex;
+  }
+
+  .logo {
+    flex-grow: 1;
+  }
+
+  .logo h2 {
+    font-size: medium;
+  }
+
+  .search {
+    display: none;
+  }
+}
+
+.hamburger {
+  display: none;
 }
